Add more content

--- a/index.html
+++ b/index.html
@@ -21,7 +21,36 @@
         </div>
       </li>
 
+      <li>
+        <img src="images/placeholder-2by3.svg" alt="">
+        <strong>Dinosaur Knights</strong>
+        <cite>Thomas S. Hedegaard</cite>
+        <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
+        <div>
+          <a href="#">Read Now</a>
+        </div>
+      </li>
 
+      <li>
+        <img src="images/placeholder-2by3.svg" alt="">
+        <strong>The Black Dragon</strong>
+        <cite>Hana Čejková</cite>
+        <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
+        <div>
+          <a href="#">Read Now</a>
+        </div>
+      </li>
+
+      <li>
+        <img src="images/placeholder-2by3.svg" alt="">
+        <strong>Light Speed Laser Ships</strong>
+        <cite>Felicity Orta Olivárez</cite>
+        <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
+        <div>
+          <a href="#">Read Now</a>
+        </div>
+      </li>
     </ul>
+
 </body>
 </html>
