--- a/index.html
+++ b/index.html
@@ -11,47 +11,39 @@
 
   <h1>Featured books</h1>
 
-  <ul class="cards">
-      <li>
-        <img src="images/placeholder-2by3.svg" alt="">
-        <strong>The Quest for Anderon</strong>
-        <cite>Tabatha R. Barrett</cite>
-        <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
-        <div>
-          <a href="#">Read Now</a>
-        </div>
-      </li>
+  <section class="cards">
+    <div class="quest">
+      <img src="images/placeholder-2by3.svg" alt="">
+      <strong>The Quest for Anderon</strong>
+      <cite>Tabatha R. Barrett</cite>
+      <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
+      <a class="btn" href="#">Read Now</a>
+    </div>
 
-      <li>
-        <img src="images/placeholder-2by3.svg" alt="">
-        <strong>Dinosaur Knights</strong>
-        <cite>Thomas S. Hedegaard</cite>
-        <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
-        <div>
-          <a href="#">Read Now</a>
-        </div>
-      </li>
+    <div class="knights">
+      <img src="images/placeholder-2by3.svg" alt="">
+      <strong>Dinosaur Knights</strong>
+      <cite>Thomas S. Hedegaard</cite>
+      <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
+      <a class="btn" href="#">Read Now</a>
+    </div>
 
-      <li>
-        <img src="images/placeholder-2by3.svg" alt="">
-        <strong>The Black Dragon</strong>
-        <cite>Hana Čejková</cite>
-        <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
-        <div>
-          <a href="#">Read Now</a>
-        </div>
-      </li>
+    <div class ="dragon">
+      <img src="images/placeholder-2by3.svg" alt="">
+      <strong>The Black Dragon</strong>
+      <cite>Hana Čejková</cite>
+      <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
+      <a class="btn" href="#">Read Now</a>
+    </div>
 
-      <li>
-        <img src="images/placeholder-2by3.svg" alt="">
-        <strong>Light Speed Laser Ships</strong>
-        <cite>Felicity Orta Olivárez</cite>
-        <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
-        <div>
-          <a href="#">Read Now</a>
-        </div>
-      </li>
-    </ul>
+    <div class ="ships">
+      <img src="images/placeholder-2by3.svg" alt="">
+      <strong>Light Speed Laser Ships</strong>
+      <cite>Felicity Orta Olivárez</cite>
+      <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
+      <a class="btn" href="#">Read Now</a>
+    </div>
+  </section>
 
 </body>
 </html>
