--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
 </head>
 <body>
 
-  <h1>Featured books</h1>
+  <h2>Featured books</h2>
 
   <section class="cards">
     <div class="quest">
       <img src="images/placeholder-2by3.svg" alt="">
-      <strong>The Quest for Anderon</strong>
+      <h3>The Quest for Anderon</h3>
       <cite>Tabatha R. Barrett</cite>
       <p>A fun & engaging kids book that harkens back to classic fantasy quest stories.</p>
-      <a class="btn" href="#">Read Now</a>
+      <a class="btn btn-small" href="#">Read Now</a>
     </div>
 
     <div class="knights">
       <img src="images/placeholder-2by3.svg" alt="">
-      <strong>Dinosaur Knights</strong>
+      <h3>Dinosaur Knights</h3>
       <cite>Thomas S. Hedegaard</cite>
       <p>Aliens land on Earth in the distant past and ride dinosaurs. It’s about as awesome as it gets.</p>
-      <a class="btn" href="#">Read Now</a>
+      <a class="btn btn-small" href="#">Read Now</a>
     </div>
 
-    <div class ="dragon">
+    <div class="dragon">
       <img src="images/placeholder-2by3.svg" alt="">
-      <strong>The Black Dragon</strong>
+      <h3>The Black Dragon</h3>
       <cite>Hana Čejková</cite>
       <p>A action-packed middle-grade interactive story adventure with a plucky hero.</p>
-      <a class="btn" href="#">Read Now</a>
+      <a class="btn btn-small" href="#">Read Now</a>
     </div>
 
-    <div class ="ships">
+    <div class="ships">
       <img src="images/placeholder-2by3.svg" alt="">
-      <strong>Light Speed Laser Ships</strong>
+      <h3>Light Speed Laser Ships</h3>
       <cite>Felicity Orta Olivárez</cite>
       <p>Military sci-fi that’s top notch. Missiles. Explosions. Lasers. Fleets. Planets. Light Speed.</p>
-      <a class="btn" href="#">Read Now</a>
+      <a class="btn btn-small" href="#">Read Now</a>
     </div>
   </section>
 
